--- a/basic-call-object.html
+++ b/basic-call-object.html
@@ -1,170 +1,41 @@
 <html>
   <head>
     <title>stream local video file</title>
+    <script src="./commonGistUtils.js"></script>
     <script src="./_roomInfo.js"></script>
-    <!-- <script src="./daily-iframe.js"></script> -->
-    <!-- <script src="https://unpkg.com/@daily-co/daily-js@0.48"></script> -->
-    <script src="https://unpkg.com/@daily-co/daily-js"></script>
   </head>
   <body onload="main()">
     <div id="local-controls" style="width: 50%; float: left">
       <button onclick="join()">join</button>
       <button onclick="leave()">leave</button><br />
       <button onclick="joinWithToken()">join with token</button>
+      <button onclick="startScreenShare()">share screen</button>
       <hr />
     </div>
     <div id="videos" style="margin-left: 50%"></div>
 
     <script>
       async function main() {
-        const urlParams = new URLSearchParams(window.location.search);
-        var callObjectMode = !urlParams.has("prebuilt");
-        if (callObjectMode) {
-          window.call = DailyIframe.createCallObject({
-            // subscribeToTracksAutomatically: false,
-            // startAudioOff: true,
-            // startVideoOff: true,
-            // audioSource: true,
-            // videoSource: false,
-            // dailyConfig: {
-            //   v2CamAndMic: true,
-            //   // useDevicePreferenceCookies: true,
-            // },
-            // url: ROOM_URL,
-            // userData: {
-            //   favoriteMovie: 'goonies',
-            // },
-            // userName: 'jackie joiner',
-            // token: window.JOIN_TOKEN,
-          });
-          window.callObject = window.call;
-          call.on("track-started", displayTrack);
-          call.on("track-stopped", destroyTrack);
-          call.on("joined-meeting", handleJoin);
-          call.on("participant-updated", logEvent);
-          // call.on("recording-started", logEvent);
-          // call.on("recording-stopped", logEvent);
-          // call.on("network-connection", logEvent);
-          // call.on("participant-left", handleParticipantLeft);
-          // call.on("participant-joined", handleParticipantJoined);
-          // call.on("meeting-session-updated", logEvent);
-        } else {
-          let iframe = document.createElement("call-iframe-container");
-          document.body.appendChild(iframe);
-          window.call = DailyIframe.createFrame(iframe, {
-            startAudioOff: true,
-            startVideoOff: true,
-            // audioSource: false,
-            dailyConfig: {
-              // alwaysIncludeMicInPermissionPrompt: false,
-            },
-            showLeaveButton: true,
-            userName: "iFrame",
-            // url: ROOM_URL,
-            // token: window.JOIN_TOKEN,
-          });
-        }
-        call.on("active-speaker-change", (e) =>
-          console.log("active speaker change event", e.activeSpeaker.peerId)
-        );
-        call.on("error", (e) => {
-          console.error("DAILY SENT AN ERROR!", e);
-          if (e.error?.details?.sourceError) {
-            console.log("Original Error", e.error?.details?.sourceError);
-          }
-        });
-      }
-
-      function displayTrack(evt) {
-        console.log("!!! TRACK STARTED", evt);
-        if (evt.track.kind === "video") {
-          displayVideo(evt);
-        } else {
-          playAudio(evt);
-        }
-      }
-
-      function displayVideo(evt) {
-        console.log(evt);
-        let videosDiv = document.getElementById("videos");
-        let videoEl = document.createElement("video");
-        videosDiv.appendChild(videoEl);
-        videoEl.style.width = "100%";
-        videoEl.srcObject = new MediaStream([evt.track]);
-        videoEl.play();
-      }
-
-      function playAudio(evt) {
-        if (evt.participant.local) {
-          return;
-        }
-        let audioEl = document.createElement("audio");
-        document.body.appendChild(audioEl);
-        audioEl.srcObject = new MediaStream([evt.track]);
-        audioEl.play();
-      }
-
-      function destroyTrack(evt) {
-        console.log(
-          "!!! TRACK STOPPED",
-          evt.kind,
-          evt.participant && evt.participant.session_id
-        );
-        let videosDiv = document.getElementById("videos");
-        let els = Array.from(videosDiv.getElementsByTagName("video")).concat(
-          Array.from(document.getElementsByTagName("audio"))
-        );
-        for (let el of els) {
-          if (el.srcObject && el.srcObject.getTracks()[0] === evt.track) {
-            el.remove();
-          }
-        }
-      }
-
-      async function aTimeout(ms) {
-        return new Promise((resolve) => setTimeout(() => resolve(), ms));
-      }
-
-      async function join() {
-        try {
-          console.log("JOIN ", window.ROOM_URL);
-          await call.join({
-            url: window.ROOM_URL,
-            // userData: { broadcastFrom: "CHANNEL" },
-          });
-          // await call.join({url: window.ROOM_URL});
-        } catch (e) {
-          console.error("join failed!", e);
-        }
-      }
-
-      async function joinWithToken() {
-        try {
-          console.log("JOIN WITH TOKEN ", window.ROOM_URL);
-          await call.join({
-            url: window.ROOM_URL,
-            token: window.JOIN_TOKEN,
-          });
-        } catch (e) {
-          console.error(`join failed!: ${e}`);
-        }
-      }
-
-      function handleJoin(e) {
-        console.log("!! i joined!", e);
-        // console.log('!! participant counts', call.participantCounts());
-      }
-
-      function leave() {
-        call.leave();
-      }
-
-      function logEvent(evt) {
-        console.log("DAILY EVENT!");
-        console.log(evt);
-        console.log("-----------");
+        let config = {
+          subscribeToTracksAutomatically: true,
+          // startAudioOff: true,
+          // startVideoOff: true,
+          // audioSource: true,
+          // videoSource: false,
+          dailyConfig: {
+            // alwaysIncludeMicInPermissionPrompt: false,
+            // avoidEval: true,
+            // callObjectBundleUrlOverride: "http://junk.com",
+          },
+          // url: ROOM_URL,
+          // userData: {
+          //   favoriteMovie: "goonies",
+          // },
+          userName: 'jackie joiner',
+          // token: window.JOIN_TOKEN,
+        };
+        createDailyInstance(config);
       }
     </script>
   </body>
 </html>
-/
