--- a/more_gists/daily-js-sources-off.html
+++ b/more_gists/daily-js-sources-off.html
@@ -1,64 +1,31 @@
 <html>
   <head>
     <title>test pagination</title>
+    <script src="../commonGistUtils.js"></script>
     <script src="../_roomInfo.js"></script>
-    <script src="https://unpkg.com/@daily-co/daily-js"></script>
   </head>
   <body onload="main()">
     <div>P A G I N A T E</div>
     <hr />
-    <div id="local-controls">
-      <button onclick="paginateLeft()">&lt;&lt;</button>
-      <button onclick="paginateRight()">&gt;&gt;</button>
-      <button onclick="leave()">leave</button>
+    <div id="local-controls" style="width: 50%; float: left">
       <button onclick="join()">join</button>
+      <button onclick="leave()">leave</button>
       <button onclick="mute()">mute</button>
       <button onclick="unmute()">unmute</button>
       <hr />
       <div>Video receive bitrate: <span id="kbps">0</span></div>
       <hr />
     </div>
-    <div id="local-cam"></div>
-    <hr />
-    <div id="videos" style="display: flex; flex-wrap: wrap;"></div>
+    <div id="videos" style="margin-left: 50%"></div>
 
     <script>
       async function main() {
-
-        window.call = DailyIframe.createCallObject({
-          subscribeToTracksAutomatically: true,
-          dailyConfig: {
-            experimentalChromeVideoMuteLightOff: true,
-          },
-        });
-
-        // set up the track event handlers
-        call.on('participant-joined', logEvent);
-        call.on('participant-left', removeParticipant);
-        call.on('participant-updated', logEvent);
-        call.on('track-started', displayTrack);
-        call.on('track-stopped', destroyTrack);
-        call.on('left-meeting', removeSelf);
-
-        let devices = await navigator.mediaDevices.enumerateDevices();
-        window.devices = devices;
-        console.log('devices', devices);
-
+        createDailyInstance();
         // join the session
-        await call.join({ url: window.ROOM_URL });
+        await join();
 
         // set up an interval callback to update the stats display at the top of the page
         setInterval(updateStatsDisplay, 1000);
-      }
-
-      async function join() {
-        console.log('join');
-        await call.join({ url: window.ROOM_URL });
-      }
-
-      async function leave() {
-        console.log('leave');
-        await call.leave();
       }
 
       async function mute() {
@@ -71,10 +38,14 @@
         await Promise.all(
           devices.map(async (device) => {
             if (device.kind === 'audioinput') {
-              console.log(`[UNMUTE] set mic to ${device.label} (${device.deviceId}`);
-              call.setInputDevicesAsync({mic: { deviceId: device.deviceId}});
-              call.setInputDevicesAsync({mic: { deviceId: device.deviceId}});
-              await call.setInputDevicesAsync({mic: { deviceId: device.deviceId}});
+              console.log(
+                `[UNMUTE] set mic to ${device.label} (${device.deviceId}`
+              );
+              call.setInputDevicesAsync({ mic: { deviceId: device.deviceId } });
+              call.setInputDevicesAsync({ mic: { deviceId: device.deviceId } });
+              await call.setInputDevicesAsync({
+                mic: { deviceId: device.deviceId },
+              });
               console.log('[UNMUTE] devices set');
             }
           })
@@ -86,111 +57,10 @@
 
       // ----
 
-      function newParticipant(evt) {
-        console.log('[PARTICIPANT JOINED]', evt.participant.session_id);
-        // subscribe if our current page is not full
-        if (evt.participant.tracks.video.state !== 'off') {
-            if (currentlySubscribedIDs.length < PAGE_SIZE) {
-              currentlySubscribedIDs.push(evt.participant.session_id);
-              call.updateParticipant(evt.participant.session_id, {
-                setSubscribedTracks: true,
-              });
-            }
-        }
-      }
-
-      function removeParticipant(evt) {
-        console.log('[PARTICIPANT LEFT]', evt);
-        if (currentlySubscribedIDs.includes(evt.participant.session_id)) {
-          currentlySubscribedIDs = currentlySubscribedIDs.filter(
-            (e) => e !== evt.participant.session_id
-          );
-        }
-      }
-
-      function removeSelf(evt) {
-        console.log('[LEFT MEETING', evt);
-        document.getElementById('local-vid').remove();
-      }
-
-      function displayTrack(evt) {
-        console.log('[TRACK STARTED]', evt.participant.session_id, evt.track.kind);
-        if (evt.track.kind === 'video') {
-          displayVideo(evt);
-        } else {
-          playAudio(evt);
-        }
-      }
-
-      const SMALL_VIDEO_WIDTH = 440;
-
-      function displayVideo(evt) {
-        let videoEl = document.createElement('video');
-        videoEl._participant = evt.participant;
-        videoEl.style.width = SMALL_VIDEO_WIDTH;
-        videoEl.style.margin = '10px';
-        videoEl.style.background = 'black';
-        let labelEl = document.createElement('p');
-        labelEl.innerHTML = evt.participant.session_id;
-        labelEl.style.color = 'black';
-        labelEl.style.position = 'absolute';
-        labelEl.style.top = '10px';
-        labelEl.style.left = '10px';
-        labelEl.style.fontWeight = 'bold';
-        let vidDivEl = document.createElement('div');
-        vidDivEl.style.position = 'relative';
-        vidDivEl.appendChild(videoEl);
-        vidDivEl.appendChild(labelEl);
-        vidDivEl.id = evt.participant.local ? 'local-vid' : evt.participant.session_id;
-        document
-          .getElementById(evt.participant.local ? 'local-cam' : 'videos')
-          .appendChild(vidDivEl);
-
-        videoEl.srcObject = new MediaStream([evt.track]);
-        videoEl.play();
-      }
-
-      function playAudio(evt) {
-        if (evt.participant.local) {
-          return;
-        }
-        let audioEl = document.createElement('audio');
-        document.body.appendChild(audioEl);
-        audioEl.srcObject = new MediaStream([evt.track]);
-        audioEl.play();
-      }
-
-      function destroyTrack(evt) {
-        console.log(
-          '[TRACK STOPPED]',
-          (evt.participant && evt.participant.session_id) || '[left meeting]',
-          evt.track.kind
-        );
-
-        let els = Array.from(document.getElementsByTagName('video')).concat(
-          Array.from(document.getElementsByTagName('audio'))
-        );
-        for (let el of els) {
-          if (el.srcObject && el.srcObject.getTracks()[0] === evt.track) {
-            el.remove();
-          }
-        }
-      }
-
-      // ----
-
       async function updateStatsDisplay() {
         const bps = (await call.getNetworkStats()).stats.latest
           .videoRecvBitsPerSecond;
         document.getElementById('kbps').innerText = Math.round(bps / 1000);
-      }
-
-      // ----
-
-      function logEvent(evt) {
-        console.log('DAILY EVENT!');
-        console.log(evt);
-        console.log('-----------');
       }
     </script>
   </body>
